examples/test/testpolicy16642.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16642
  namespace: namespace137
spec:
  podSelector:
    matchLabels:
      key19: value21
      key25: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value44
          key15: value44
      podSelector:
        matchLabels:
          key48: value8
          key25: value2
